@startuml
' CineScope class diagram generated by GitHub Copilot
' Models
package Models {
  class Movie {
	+int Id
	+string Title
	+string Genre
	+string ReleaseDate
	+string Rating

	+string Description
	+string? SubTitle
	+string? PosterFilename
	+string? PosterFilenameWide

  }

  class Actor {
	+int Id
	+string Name
	+string? PictureFilename
	+ICollection<ActorMovie> ActorMovies
  }

  class ActorMovie {
	+int ActorId
	+int MovieId
	+Actor Actor
	+Movie Movie
  }

  class ErrorViewModel {
	+string RequestId
  }
}

' DbContext
class CineScopeDbContext {
  +DbSet<Movie> Movies
  +DbSet<Actor> Actors
  +DbSet<ActorMovie> ActorMovies
  +OnModelCreating(ModelBuilder)
}

' Controllers
package Controllers {
  class HomeController {
	-CineScopeDbContext _cineScopeDbContext
	+IActionResult Index(string? searchValue, string? genre)
	+IActionResult MovieDetails(int id)
	+IActionResult ActorDetails(int id)
  }

  class AdminController {
	-CineScopeDbContext _cineScopeDbContext
	+IActionResult Index()
	+IActionResult CreateMovie(...)
	+IActionResult EditMovie(...)
	+IActionResult DeleteMovie(...)
  }

  class ActorsController {
	-CineScopeDbContext _cineScopeDbContext
	+IActionResult AllActors()
	+IActionResult Details(int id)
  }
}

' ViewModels
package ViewModels {
  class HomeIndex {
	+List<Movie> Movies
	+List<Movie> TopMovies
	+List<SelectListItem> Genres
	+string specialString
  }

  class HomeMovieDetails {
	+Movie Movie
	+List<Actor> Actors
  }

  class AdminCrud {
	+Movie Movie
	+List<SelectListItem> AvailableActors
  }
}

' Relations
Movie "1" <-- "0..*" ActorMovie : has
Actor "1" <-- "0..*" ActorMovie : has
ActorMovie --> Movie
ActorMovie --> Actor

CineScopeDbContext --> Movie
CineScopeDbContext --> Actor
CineScopeDbContext --> ActorMovie

HomeController --> CineScopeDbContext : uses
AdminController --> CineScopeDbContext : uses
ActorsController --> CineScopeDbContext : uses

HomeIndex --> Movie
HomeIndex --> SelectListItem
HomeMovieDetails --> Movie
HomeMovieDetails --> Actor
AdminCrud --> Movie

@enduml
